--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-cf2c9043.js"></script>
+    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-b7b7e429.js"></script>
     <link rel="stylesheet" href="/Luminous-Brunch/assets/main-9a2ad696.css">
   </head>
   <body>
@@ -117,7 +117,7 @@
             <a
               class="py-4 px-9 py-lg-3 px-lg-6 border-bottom-1 fw-500"
               href="6-1-1-2_reservation-info.html"
-              >查看訂單資訊</a
+              >查看訂位資訊</a
             >
           </li>
           <li>
