--- a/pages/password.html
+++ b/pages/password.html
@@ -45,7 +45,7 @@
               <!-- 放錯誤訊息的區塊 -->
               <p class="errorMessage"></p>
               <div class="text-center mt-4">
-                <button class="btn btn-lg btn-blue btn-block w-100 submitValidateCode" type="submit" id="login">確認</button>
+                <button class="btn btn-lg btn-blue btn-block w-100 submitValidateCode" type="submit" id="submitValidateCodeBtn">確認</button>
               </div>
             </div>
             <div class="mt-3">
