--- a/pages/register.html
+++ b/pages/register.html
@@ -29,6 +29,7 @@
                 required
                 autofocus
               />
+              <p class="text-danger" data-message="Email">必填</p>
             </div>
             <div class="mb-2">
               <label for="inputPassword" class="sr-only text-light">密碼</label>
@@ -39,6 +40,7 @@
                 placeholder="請輸入密碼"
                 required
               />
+              <p class="text-danger" data-message="password">必填 6到20個字元之間的密碼，包含一個數字、一個大寫字母和一個小寫字母</p>
             </div>
             <div class="mb-2">
               <label for="inputPassword" class="sr-only text-light"
@@ -51,6 +53,7 @@
                 placeholder="確認輸入密碼"
                 required
               />
+              <p class="text-danger" data-message="checkpassword" >必填</p>
             </div>
             <div class="mb-2">
               <label for="inputPassword" class="sr-only text-light"
@@ -73,6 +76,7 @@
                 placeholder="請輸入電話"
                 required
               />
+              <p class="text-danger" data-message="phone" >必填</p>
             </div>
             <div class="d-flex">
               <div class="form-check pe-3">
