--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>register</title>
-    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-b7b7e429.js"></script>
+    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-a89c5383.js"></script>
     <link rel="stylesheet" href="/Luminous-Brunch/assets/main-9a2ad696.css">
   </head>
   <body>
@@ -160,6 +160,7 @@
                 required
                 autofocus
               />
+              <p class="text-danger" data-message="Email">必填</p>
             </div>
             <div class="mb-2">
               <label for="inputPassword" class="sr-only text-light">密碼</label>
@@ -170,6 +171,7 @@
                 placeholder="請輸入密碼"
                 required
               />
+              <p class="text-danger" data-message="password">必填 6到20個字元之間的密碼，包含一個數字、一個大寫字母和一個小寫字母</p>
             </div>
             <div class="mb-2">
               <label for="inputPassword" class="sr-only text-light"
@@ -182,6 +184,7 @@
                 placeholder="確認輸入密碼"
                 required
               />
+              <p class="text-danger" data-message="checkpassword" >必填</p>
             </div>
             <div class="mb-2">
               <label for="inputPassword" class="sr-only text-light"
@@ -204,6 +207,7 @@
                 placeholder="請輸入電話"
                 required
               />
+              <p class="text-danger" data-message="phone" >必填</p>
             </div>
             <div class="d-flex">
               <div class="form-check pe-3">
