--- a/password.html
+++ b/password.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-b7b7e429.js"></script>
+  <script type="module" crossorigin src="/Luminous-Brunch/assets/main-a89c5383.js"></script>
   <link rel="stylesheet" href="/Luminous-Brunch/assets/main-9a2ad696.css">
 </head>
 <body>
@@ -176,7 +176,7 @@
               <!-- 放錯誤訊息的區塊 -->
               <p class="errorMessage"></p>
               <div class="text-center mt-4">
-                <button class="btn btn-lg btn-blue btn-block w-100 submitValidateCode" type="submit" id="login">確認</button>
+                <button class="btn btn-lg btn-blue btn-block w-100 submitValidateCode" type="submit" id="submitValidateCodeBtn">確認</button>
               </div>
             </div>
             <div class="mt-3">
