加入loading圖片，調整訂位資訊get路徑

--- a/pages/register.html
+++ b/pages/register.html
@@ -117,6 +117,7 @@
               >
                 註冊
               </button>
+              <span class="alertMessage text-yellow-100"></span>
             </div>
             <div class="form-check mt-4">
               <input
