--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>register</title>
-    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-a89c5383.js"></script>
+    <script type="module" crossorigin src="/Luminous-Brunch/assets/main-a28a928f.js"></script>
     <link rel="stylesheet" href="/Luminous-Brunch/assets/main-9a2ad696.css">
   </head>
   <body>
@@ -248,6 +248,7 @@
               >
                 註冊
               </button>
+              <span class="alertMessage text-yellow-100"></span>
             </div>
             <div class="form-check mt-4">
               <input
