確認密碼調整

--- a/pages/register.html
+++ b/pages/register.html
@@ -43,7 +43,7 @@
               <p class="text-danger" data-message="password">必填 6到20個字元之間的密碼，包含一個數字、一個大寫字母和一個小寫字母</p>
             </div>
             <div class="mb-2">
-              <label for="inputPassword" class="sr-only text-light"
+              <label for="checkPassword" class="sr-only text-light"
                 >確認密碼</label
               >
               <input
