增加swal登入註冊提示

--- a/pages/3_newsMain.html
+++ b/pages/3_newsMain.html
@@ -18,7 +18,7 @@
             <img class="news-pic" src="/assets/images/newsPic4.jpg" alt="" />
             <h3 class="news-content">
               <a href="3-1_newsContent.html">
-                ＂每日精選美味套餐優惠＂
+                "每日精選美味套餐優惠"
                 <p class="fs-4 d-flex justify-content-center">
                   <br /><br />活動期間:2023/10/10-2023/12/15
                 </p>
@@ -31,7 +31,7 @@
               <div class="card" style="width: 20%">
                 <img
                   src="/assets/images/newsPic2.jpg"
-                  class="card-img-top card-img"
+                  class="main-card-img"
                   alt="..."
                   height="300px"
                 />
@@ -47,7 +47,7 @@
               <div class="card" style="width: 20%">
                 <img
                   src="https://images.unsplash.com/photo-1627309302198-09a50ae1b209?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                  class="card-img-top card-img"
+                  class="main-card-img"
                   alt="..."
                   height="300px"
                 />
@@ -63,7 +63,7 @@
               <div class="card" style="width: 20%">
                 <img
                   src="/assets/images/newsPic3.jpg"
-                  class="card-img-top card-img-size"
+                  class="main-card-img"
                   alt="..."
                   height="300px"
                 />
