--- a/pages/register.html
+++ b/pages/register.html
@@ -40,7 +40,10 @@
                 placeholder="請輸入密碼"
                 required
               />
-              <p class="text-danger" data-message="password">必填 6到20個字元之間的密碼，包含一個數字、一個大寫字母和一個小寫字母</p>
+              <p class="text-danger" data-message="password">
+                必填
+                6到20個字元之間的密碼，包含一個數字、一個大寫字母和一個小寫字母
+              </p>
             </div>
             <div class="mb-2">
               <label for="checkPassword" class="sr-only text-light"
@@ -53,7 +56,7 @@
                 placeholder="確認輸入密碼"
                 required
               />
-              <p class="text-danger" data-message="checkpassword" >必填</p>
+              <p class="text-danger" data-message="checkpassword">必填</p>
             </div>
             <div class="mb-2">
               <label for="inputPassword" class="sr-only text-light"
@@ -76,7 +79,7 @@
                 placeholder="請輸入電話"
                 required
               />
-              <p class="text-danger" data-message="phone" >必填</p>
+              <p class="text-danger" data-message="phone">必填</p>
             </div>
             <div class="d-flex">
               <div class="form-check pe-3">
@@ -138,7 +141,15 @@
       <%- include('./layout/footer'); -%>
     </main>
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-
+    <script src="
+    https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.all.min.js
+    "></script>
+    <link
+      href="
+    https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.min.css
+    "
+      rel="stylesheet"
+    />
     <script type="module" src="../main.js"></script>
   </body>
 </html>
