新增滾動效果

--- a/pages/index.html
+++ b/pages/index.html
@@ -60,139 +60,172 @@
     </section>
     <!-- banner end -->
     <!-- 提供服務-start -->
-
-    <h2 class="text-primary font-NotoSerif fw-bold text-center mb-11 mt-11">
-      <img src="/assets/images/scrollDesktop.png" alt="" />
-      <div class="d-flex justify-content-center mb-7">
-        <p class="font-Caveat">Lumunous</p>
-        <p class="font-NotoSerif">&emsp;想提供您...</p>
-      </div>
-      <ul class="offer-desktop ps-0">
-        <li class="d-flex flex-column mb-3">
-          <img src="/assets/images/offerService3.png" alt="" />
-          <h5 class="text-yellow-300 font-NotoSerif">兼具營養及美味的餐點</h5>
-        </li>
-        <li class="d-flex flex-column mb-3">
-          <h5 class="text-yellow-300 font-NotoSerif">明亮寬敞的用餐環境</h5>
-          <img src="/assets/images/offerService.png" alt="" />
-        </li>
-        <li class="d-flex flex-column mb-3">
-          <img src="/assets/images/offerService2.png" alt="" />
-          <h5 class="text-yellow-300 font-NotoSerif">找回迎接生活的動力</h5>
-        </li>
-      </ul>
-      <ul class="offer-mobile ps-0">
-        <li class="d-flex flex-column mb-3">
-          <img src="/assets/images/offerService3.png" alt="" />
-          <h5 class="text-yellow-300 font-NotoSerif">兼具營養及美味的餐點</h5>
-        </li>
-        <li class="d-flex flex-column mb-3">
-          <img src="/assets/images/offerService.png" alt="" />
-          <h5 class="text-yellow-300 font-NotoSerif">明亮寬敞的用餐環境</h5>
-        </li>
-        <li class="d-flex flex-column mb-3">
-          <img src="/assets/images/offerService2.png" alt="" />
-          <h5 class="text-yellow-300 font-NotoSerif">找回迎接生活的動力</h5>
-        </li>
-      </ul>
-    </h2>
+    <section class="section" id="section--1">
+      <h2 class="text-primary font-NotoSerif fw-bold text-center mb-11 mt-11">
+        <img src="/assets/images/scrollDesktop.png" alt="" />
+        <div class="d-flex justify-content-center mb-7 dynamic-effect">
+          <p class="font-Caveat">Lumunous</p>
+          <p class="font-NotoSerif">&emsp;想提供您...</p>
+        </div>
+        <ul class="offer-desktop ps-0">
+          <li class="d-flex flex-column mb-3">
+            <img src="/assets/images/offerService3.png" alt="" />
+            <h5 class="text-yellow-300 font-NotoSerif">兼具營養及美味的餐點</h5>
+          </li>
+          <li class="d-flex flex-column mb-3">
+            <h5 class="text-yellow-300 font-NotoSerif">明亮寬敞的用餐環境</h5>
+            <img src="/assets/images/offerService.png" alt="" />
+          </li>
+          <li class="d-flex flex-column mb-3">
+            <img src="/assets/images/offerService2.png" alt="" />
+            <h5 class="text-yellow-300 font-NotoSerif">找回迎接生活的動力</h5>
+          </li>
+        </ul>
+        <ul class="offer-mobile ps-0">
+          <li class="d-flex flex-column mb-3">
+            <img src="/assets/images/offerService3.png" alt="" />
+            <h5 class="text-yellow-300 font-NotoSerif">兼具營養及美味的餐點</h5>
+          </li>
+          <li class="d-flex flex-column mb-3">
+            <img src="/assets/images/offerService.png" alt="" />
+            <h5 class="text-yellow-300 font-NotoSerif">明亮寬敞的用餐環境</h5>
+          </li>
+          <li class="d-flex flex-column mb-3">
+            <img src="/assets/images/offerService2.png" alt="" />
+            <h5 class="text-yellow-300 font-NotoSerif">找回迎接生活的動力</h5>
+          </li>
+        </ul>
+      </h2>
+    </section>
     <!-- 提供服務-end -->
     <!-- 最新消息-開始 -->
-
-    <div
-      class="bg-pink d-flex align-items-center justify-content-center"
-      style="height: 903px"
-    >
-      <div class="newsPic">
-        <div>
-          <img src="/assets/images/news.png" alt="" />
-          <div class="position-absolute top-0 start-0">
-            <img src="/assets/images/star2.png" alt="" />
+    <section class="section" id="section--2">
+      <div
+        class="bg-pink d-flex align-items-center justify-content-center"
+        style="height: 903px"
+      >
+        <div class="newsPic">
+          <div>
+            <img src="/assets/images/news.png" alt="" />
+            <div class="position-absolute top-0 start-0">
+              <img src="/assets/images/star2.png" alt="" />
+            </div>
+            <div class="position-absolute bottom-0 end-0">
+              <img src="/assets/images/star.png" alt="" />
+            </div>
           </div>
-          <div class="position-absolute bottom-0 end-0">
-            <img src="/assets/images/star.png" alt="" />
+        </div>
+        <div class="box news-desktop">
+          <div class="news_list font-NotoSerif text-yellow-300">
+            <p class="text-primary text-news">最新消息</p>
+            <div class="paragraph">
+              <div style="margin-bottom: 35px">
+                <a href="3-1_newsContent.html">○ 每日精選美味套餐優惠</a>
+              </div>
+              <div style="margin-bottom: 35px">
+                <a href="3-1_newsContent2.html">○ 刷卡支付享95折優惠</a>
+              </div>
+              <div style="margin-bottom: 60px">
+                <a href="3-1_newsContent3.html">○ 外帶早餐享9折優惠</a>
+              </div>
+            </div>
+          </div>
+          <div class="link">
+            <a
+              href="3_newsMain.html"
+              style="
+                float: right;
+                color: #4a4a4a;
+                margin-top: 15px;
+                font: NotoSerif;
+              "
+              >看更多 ></a
+            >
+          </div>
+        </div>
+        <div class="box news-mobile">
+          <div class="news_list font-NotoSerif text-yellow-300">
+            <p class="text-primary text-news">最新消息</p>
+            <div class="paragraph">
+              <div style="margin-bottom: 35px">
+                <a href="3-1_newsContent.html">○ 每日精選美味套餐優惠</a>
+              </div>
+              <div style="margin-bottom: 35px">
+                <a href="3-1_newsContent2.html">○ 刷卡支付享95折優惠</a>
+              </div>
+              <div style="margin-bottom: 60px">
+                <a href="3-1_newsContent3.html">○ 外帶早餐享9折優惠</a>
+              </div>
+            </div>
+          </div>
+          <div class="link">
+            <a
+              href="3_newsMain.html"
+              style="
+                float: right;
+                color: #4a4a4a;
+                margin-top: 15px;
+                font: NotoSerif;
+              "
+              >看更多 ></a
+            >
           </div>
         </div>
       </div>
-      <div class="box">
-        <div class="news_list font-NotoSerif text-yellow-300">
-          <p class="text-primary text-news">最新消息</p>
-          <div class="paragraph">
-            <div style="margin-bottom: 35px">
-              <a href="#">○ 每日精選美味套餐優惠</a>
-            </div>
-            <div style="margin-bottom: 35px">
-              <a href="#">○ 刷卡支付享95折優惠</a>
-            </div>
-            <div style="margin-bottom: 60px">
-              <a href="#">○ 外帶早餐享9折優惠</a>
-            </div>
-          </div>
-        </div>
-        <div class="link">
-          <a
-            href="3_newsMain.html"
-            style="
-              float: right;
-              color: #4a4a4a;
-              margin-top: 15px;
-              font: NotoSerif;
-            "
-            >看更多 ></a
-          >
-        </div>
-      </div>
-    </div>
+    </section>
     <!-- 最新消息-結束 -->
 
     <!-- 預約三步驟 start -->
-    <div class="container my-11">
-      <div class="d-flex flex-column justify-content-center">
-        <h2
-          class="text-primary font-NotoSerif fw-bold text-center mb-11"
-          data-aos="fade-right"
-        >
-          簡單預約三步驟
-        </h2>
-        <div class="row align-items-center" data-aos="fade-out">
-          <div class="col-lg-4">
-            <div class="d-flex flex-column text-center">
-              <img
-                src="../assets/images/Illustration.png"
-                width="187px"
-                alt=""
-                class="mx-auto mb-7"
-              />
-              <p class="font-NotoSerif fs-4">1. 挑選時段</p>
+    <section class="section" id="section--3">
+      <div class="container my-11">
+        <div class="d-flex flex-column justify-content-center">
+          <h2
+            class="text-primary font-NotoSerif fw-bold text-center mb-11"
+            data-aos="fade-right"
+          >
+            簡單預約三步驟
+          </h2>
+          <div class="row align-items-center" data-aos="fade-out">
+            <div class="col-lg-4">
+              <div class="d-flex flex-column text-center">
+                <img
+                  src="../assets/images/Illustration.png"
+                  width="187px"
+                  alt=""
+                  class="mx-auto mb-7"
+                />
+                <p class="font-NotoSerif fs-4">1. 挑選時段</p>
+              </div>
             </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="d-flex flex-column text-center justify-content-center">
-              <img
-                src="../assets/images/Illustration (1).png"
-                width="187px"
-                alt=""
-                class="mx-auto mb-7"
-              />
-              <p class="font-NotoSerif fs-4">2. 確認訂位</p>
+            <div class="col-lg-4">
+              <div
+                class="d-flex flex-column text-center justify-content-center"
+              >
+                <img
+                  src="../assets/images/Illustration (1).png"
+                  width="187px"
+                  alt=""
+                  class="mx-auto mb-7"
+                />
+                <p class="font-NotoSerif fs-4">2. 確認訂位</p>
+              </div>
             </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="d-flex flex-column text-center">
-              <img
-                src="../assets/images/Illustration (2).png"
-                width="145px"
-                height="194px"
-                alt=""
-                class="mx-auto mb-7"
-              />
-              <p class="font-NotoSerif fs-4">3. 完成訂位</p>
+            <div class="col-lg-4">
+              <div class="d-flex flex-column text-center">
+                <img
+                  src="../assets/images/Illustration (2).png"
+                  width="145px"
+                  height="194px"
+                  alt=""
+                  class="mx-auto mb-7"
+                />
+                <p class="font-NotoSerif fs-4">3. 完成訂位</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-
+    </section>
     <!-- 預約三步驟 end -->
     <!-- 菜單區塊 start -->
     <!-- swiper+菜單輪播測試 Mobile -->
@@ -248,106 +281,110 @@
     <!-- swiper+菜單輪播測試 mobile 結束 -->
     <!-- swiper+菜單輪播測試 pc -->
     <!-- Swiper -->
-    <div class="position-relative d-none d-lg-block mb-11">
-      <div class="menu-border"></div>
-      <div class="swiper mySwiper position-relative">
-        <div class="swiper-wrapper position-relative">
-          <div class="swiper-slide position-relative">
-            <img
-              src="../assets/images/index-menu-1.jpg"
-              alt="首頁菜單輪播1"
-              class=""
-            />
+    <section class="section" id="section--4">
+      <div class="position-relative d-none d-lg-block mb-11">
+        <div class="menu-border"></div>
+        <div class="swiper mySwiper position-relative">
+          <div class="swiper-wrapper position-relative">
+            <div class="swiper-slide position-relative">
+              <img
+                src="../assets/images/index-menu-1.jpg"
+                alt="首頁菜單輪播1"
+                class=""
+              />
+            </div>
+            <div class="swiper-slide position-relative">
+              <img
+                src="../assets/images/index-menu-1.jpg"
+                alt="首頁菜單輪播1"
+                class=""
+              />
+            </div>
+            <div class="swiper-slide position-relative">
+              <img
+                src="../assets/images/index-menu-1.jpg"
+                alt="首頁菜單輪播1"
+                class=""
+              />
+            </div>
           </div>
-          <div class="swiper-slide position-relative">
-            <img
-              src="../assets/images/index-menu-1.jpg"
-              alt="首頁菜單輪播1"
-              class=""
-            />
-          </div>
-          <div class="swiper-slide position-relative">
-            <img
-              src="../assets/images/index-menu-1.jpg"
-              alt="首頁菜單輪播1"
-              class=""
-            />
-          </div>
-        </div>
 
-        <div class="swiper-pagination mt-6"></div>
+          <div class="swiper-pagination mt-6"></div>
+        </div>
+        <a
+          href="4_menu.html"
+          class="menu-title-bg position-absolute translate-middle menu-title-bg-brunch"
+        >
+          <h1 class="fs-1 font-NotoSerif text-light fw-bold">精 選 早 午 餐</h1>
+          <p class="fs-3 font-Caveat text-light mt-1">Brunch Specials</p>
+        </a>
+        <a
+          href="4_menu.html"
+          class="menu-title-bg position-absolute translate-middle menu-title-bg-news"
+        >
+          <h1 class="fs-1 font-NotoSerif text-light fw-bold">最 新 餐 點</h1>
+          <p class="fs-3 font-Caveat text-light mt-1">New Menu Items</p>
+        </a>
       </div>
-      <a
-        href="4_menu.html"
-        class="menu-title-bg position-absolute translate-middle menu-title-bg-brunch"
-      >
-        <h1 class="fs-1 font-NotoSerif text-light fw-bold">精 選 早 午 餐</h1>
-        <p class="fs-3 font-Caveat text-light mt-1">Brunch Specials</p>
-      </a>
-      <a
-        href="4_menu.html"
-        class="menu-title-bg position-absolute translate-middle menu-title-bg-news"
-      >
-        <h1 class="fs-1 font-NotoSerif text-light fw-bold">最 新 餐 點</h1>
-        <p class="fs-3 font-Caveat text-light mt-1">New Menu Items</p>
-      </a>
-    </div>
+    </section>
     <!-- swiper+菜單輪播測試 結束 -->
     <!-- 菜單區塊 end -->
     <!-- 顧客評論 start-->
-    <div class="bg h-100">
-      <div class="container">
-        <div
-          class="row carousel slide py-11"
-          id="carouselExampleControls"
-          data-bs-ride="carousel"
-        >
+    <section class="section" id="section--5">
+      <div class="bg h-100">
+        <div class="container">
           <div
-            class="col-md-2 d-flex align-items-center justify-content-center col-sm-12"
+            class="row carousel slide py-11"
+            id="carouselExampleControls"
+            data-bs-ride="carousel"
           >
-            <div class="text">
-              <h3>顧客評論</h3>
-              <div>
-                <ul class="d-flex justify-content-between">
-                  <li class="arrow-left" id="previous">
-                    <a
-                      href="#"
-                      class=""
-                      type="button"
-                      data-bs-target="#carouselExampleControls"
-                      data-bs-slide="prev"
-                      role="button"
-                    >
-                      <span class="visually-hidden">Previous</span>
-                      <img src="/assets/images/Vector.png" alt="" />
-                    </a>
-                  </li>
-                  <li class="arrow-right" id="next">
-                    <a
-                      href="#"
-                      class=""
-                      type="button"
-                      data-bs-target="#carouselExampleControls"
-                      data-bs-slide="next"
-                      role="button"
-                    >
-                      <span class="visually-hidden">Next</span>
-                      <img src="/assets/images/Vector-right.png" alt="" />
-                    </a>
-                  </li>
-                </ul>
+            <div
+              class="col-md-2 d-flex align-items-center justify-content-center col-sm-12"
+            >
+              <div class="text">
+                <h3>顧客評論</h3>
+                <div>
+                  <ul class="d-flex justify-content-between">
+                    <li class="arrow-left" id="previous">
+                      <a
+                        href="#"
+                        class=""
+                        type="button"
+                        data-bs-target="#carouselExampleControls"
+                        data-bs-slide="prev"
+                        role="button"
+                      >
+                        <span class="visually-hidden">Previous</span>
+                        <img src="/assets/images/Vector.png" alt="" />
+                      </a>
+                    </li>
+                    <li class="arrow-right" id="next">
+                      <a
+                        href="#"
+                        class=""
+                        type="button"
+                        data-bs-target="#carouselExampleControls"
+                        data-bs-slide="next"
+                        role="button"
+                      >
+                        <span class="visually-hidden">Next</span>
+                        <img src="/assets/images/Vector-right.png" alt="" />
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
+            <div class="carousel-item d-flex" id="course-section"></div>
           </div>
-          <div class="carousel-item d-flex" id="course-section"></div>
-        </div>
-        <div class="d-flex justify-content-center booking pb-10">
-          <a type="button" class="btn btn-primary" href="5-1_booking.html"
-            >立即訂位</a
-          >
+          <div class="d-flex justify-content-center booking pb-10">
+            <a type="button" class="btn btn-primary" href="5-1_booking.html"
+              >立即訂位</a
+            >
+          </div>
         </div>
       </div>
-    </div>
+    </section>
     <!-- 顧客頻論 end -->
     <a id="toTOP"
       ><img src="/assets/images/Back to top-lg.png" alt="backToTopBtn"
