增加swal提示(修改會員資料，訂位資訊)

--- a/pages/6-1-1-2_reservation-info.html
+++ b/pages/6-1-1-2_reservation-info.html
@@ -30,6 +30,15 @@
   </div>
   <%- include('./layout/footer'); -%>
   <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+  <script src="
+    https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.all.min.js
+    "></script>
+    <link
+      href="
+    https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.min.css
+    "
+      rel="stylesheet"
+    />
   <script type="module" src="../main.js"></script>
 </body>
 </html>
