--- a/pages/index.html
+++ b/pages/index.html
@@ -115,7 +115,7 @@
             </div>
           </div>
         </div>
-        <div class="box news-desktop">
+        <div class="box news-list-desktop">
           <div class="news_list font-NotoSerif text-yellow-300">
             <p class="text-primary text-news">最新消息</p>
             <div class="paragraph">
@@ -143,7 +143,7 @@
             >
           </div>
         </div>
-        <div class="box news-mobile">
+        <div class="box news-list-mobile">
           <div class="news_list font-NotoSerif text-yellow-300">
             <p class="text-primary text-news">最新消息</p>
             <div class="paragraph">
